create initial Render Product function

--- a/products/index.html
+++ b/products/index.html
@@ -14,8 +14,25 @@
     </header>
 
     <main>
-        <div class="product-card">
-            <img class="product-image" src="https://www.edenbrothers.com/store/media/Seeds-Flowers/resized/SFMOR137-1_medium.jpg">
+        <h2>Get your Morning Glory Seeds</h2>
+        <ul id="flowers-list">
+            <!-- This is where each individual product should be rendered, 
+            refer to the commented out product sample below, make sure each item renders as a <li> within this <ul> -->
+            
+
+        </ul>
+
+
+
+
+
+
+
+
+
+
+        <!-- <div class="product-card">
+            <img id="product-image" src="https://www.edenbrothers.com/store/media/Seeds-Flowers/resized/SFMOR137-1_medium.jpg">
             <div class="product-description-div">
                 <p class="product-description">
                     Knowlians Black
@@ -23,7 +40,7 @@
                 <p class="product-price">$12.00</p>
                 <button class="product-button">Add</button>
             </div>
-        </div>
+        </div> -->
     </main>
 
     <script type="module" src="products.js"></script>
