complete a succesful render product test

--- a/products/index.html
+++ b/products/index.html
@@ -38,7 +38,7 @@
                     Knowlians Black
                 </p>
                 <p class="product-price">$12.00</p>
-                <button class="product-button">Add</button>
+                <button class="product-button" value="knowlians black">Add</button>
             </div>
         </div> -->
     </main>
