finish requirements for day one of this lab

--- a/products/index.html
+++ b/products/index.html
@@ -15,12 +15,12 @@
 
     <main>
         <h2>Get your Morning Glory Seeds</h2>
-        <ul id="flowers-list">
-            <!-- This is where each individual product should be rendered, 
-            refer to the commented out product sample below, make sure each item renders as a <li> within this <ul> -->
-            
-
-        </ul>
+        <div class="product-list-div">
+            <ul id="flowers-list">
+                <!-- This is where each individual product should be rendered, 
+                refer to the commented out product sample below, make sure each item renders as a <li> within this <ul> -->
+            </ul>
+        </div>
 
 
 
