--- a/test/index.html
+++ b/test/index.html
@@ -40,7 +40,7 @@
       value: storageMock(),
     });</script>
 
-  <script type="module" src="render-product.test.js"></script>
+  <script type="module" src="tests.js"></script>
 </body>
 
 </html>
