create DOM render function, hopefully it works haha

--- a/shopping-cart/index.html
+++ b/shopping-cart/index.html
@@ -34,11 +34,12 @@
                     <th></th>
                     <th></th>
                     <th></th>
-                    <th>Total: $9.00</th>
+                    <th id="grand-total">Total: $9.00</th>
                 </tr>
             </tfoot>
         </table>
         <button>Purchase</button>
+        <script type="module" src="render-line-items.js"></script>
     </main>
     
 </body>
