generate shopping cart is working but the totals and costs are rendering kind of funny

--- a/shopping-cart/index.html
+++ b/shopping-cart/index.html
@@ -21,12 +21,12 @@
                     <th>Total</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody id="the-table-body">
                 <tr>
-                    <td id="quantity">3</td>
-                    <td id="product-name">Scarlett Ohara</td>
-                    <td id="product-price">$3.00</td>
-                    <td id="product-total-price">$9.00</td>
+                    <td id="quantity"></td>
+                    <td id="product-name"></td>
+                    <td id="product-price"></td>
+                    <td id="product-total-price"></td>
                 </tr>
             </tbody>
             <tfoot>
@@ -39,7 +39,7 @@
             </tfoot>
         </table>
         <button>Purchase</button>
-        <script type="module" src="render-line-items.js"></script>
+        <script type="module" src="shopping-cart.js"></script>
     </main>
     
 </body>
