grand total function is working and tested

--- a/shopping-cart/index.html
+++ b/shopping-cart/index.html
@@ -34,7 +34,7 @@
                     <th></th>
                     <th></th>
                     <th></th>
-                    <th id="grand-total">Total: $9.00</th>
+                    <th id="grand-total"></th>
                 </tr>
             </tfoot>
         </table>
