place order btn works, but i need to redirect to home page, going to add page navigation to it all now

--- a/shopping-cart/index.html
+++ b/shopping-cart/index.html
@@ -41,7 +41,7 @@
             </table>
         </div>
         <div class="purchase-button">
-            <button>Purchase <span>....Please</span></button>
+            <button id="purchase-cart-btn">Purchase <span>....Please</span></button>
         </div>
         <script type="module" src="shopping-cart.js"></script>
     </main>
