--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>The Morning Glory Shop</title>
 </head>
 
 <body>
+    <div class="nav-bar">
+        <a href="/shopping-cart/index.html">Cart</a>
+        <a href="/products/index.html">Flowers</a>
+        <a href="https://en.wikipedia.org/wiki/Morning_glory">About Us</a>
+    </div>
     <script type="module" src="app.js"></script>
 </body>
 
