add nav bar to every page

--- a/products/index.html
+++ b/products/index.html
@@ -9,9 +9,12 @@
 </head>
 
 <body>
-    <header>
-        <h1>Morning Glory For Sale</h1>
-    </header>
+    <div class="nav-bar">
+        <a href="/shopping-cart/index.html">Cart</a>
+        <a href="/products/index.html">Flowers</a>
+        <a href="https://en.wikipedia.org/wiki/Morning_glory">About Us</a>
+    </div>
+   
 
     <main>
         <h2>Get your Morning Glory Seeds</h2>
