--- a/shopping-cart/index.html
+++ b/shopping-cart/index.html
@@ -8,6 +8,11 @@
     <title>Shopping Cart</title>
 </head>
 <body>
+    <div class="nav-bar">
+        <a href="/shopping-cart/index.html">Cart</a>
+        <a href="/products/index.html">Flowers</a>
+        <a href="https://en.wikipedia.org/wiki/Morning_glory">About Us</a>
+    </div>
     <header>
         <h1>Shopping Cart</h1>
     </header>
